--- a/AppWebInternetBanking/AppWebInternetBanking.csproj
+++ b/AppWebInternetBanking/AppWebInternetBanking.csproj
@@ -161,6 +161,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="img\img_avatar2.png" />
+    <Content Include="img\login.jpg" />
     <Content Include="img\ulacit.jpg" />
     <Content Include="Login.aspx" />
     <Content Include="Registro.aspx" />
