--- a/API/Web.config
+++ b/API/Web.config
@@ -76,8 +76,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings><add name="INTERNET_BANKING" connectionString="Data Source=DESKTOP-OJM975E\SQLEXPRESS;Initial catalog=INTERNET_BANKING_DW1_3C2021;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-  <add name="INTERNET_BANKING_DW1_3C2021Entities" connectionString="metadata=res://*/Models.ModeloIB.csdl|res://*/Models.ModeloIB.ssdl|res://*/Models.ModeloIB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-OJM975E\SQLEXPRESS;initial catalog=INTERNET_BANKING_DW1_3C2021;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+	  <add name="INTERNET_BANKING" connectionString="Data Source=DESKTOP-2B5NANB;Initial catalog=INTERNET_BANKING_DW1_3C2021;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+  <add name="INTERNET_BANKING_DW1_3C2021Entities" connectionString="metadata=res://*/Models.ModeloIB.csdl|res://*/Models.ModeloIB.ssdl|res://*/Models.ModeloIB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2B5NANB;initial catalog=INTERNET_BANKING_DW1_3C2021;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
