--- a/AppWebInternetBanking/AppWebInternetBanking.csproj
+++ b/AppWebInternetBanking/AppWebInternetBanking.csproj
@@ -201,13 +201,17 @@
     <Content Include="Views\frmCredito.aspx" />
     <Content Include="Views\frmCuenta.aspx" />
     <Content Include="Views\frmDepositoPlazo.aspx" />
+    <Content Include="Views\frmLicencia.aspx" />
     <Content Include="Views\frmMarchamo.aspx" />
     <Content Include="Views\frmMoneda.aspx" />
     <Content Include="Views\frmPago.aspx" />
+    <Content Include="Views\frmPermiso.aspx" />
+    <Content Include="Views\frmPrestamo.aspx" />
     <Content Include="Views\frmReporteError.aspx" />
     <Content Include="Views\frmReporteEstadistica.aspx" />
     <Content Include="Views\frmReporteSesion.aspx" />
     <Content Include="Views\frmServicio.aspx" />
+    <Content Include="Views\frmSobre.aspx" />
     <Content Include="Views\frmTarjeta.aspx" />
     <Content Include="Views\frmTransferencia.aspx" />
     <Content Include="Web.config" />
@@ -237,10 +241,14 @@
     <Compile Include="Controllers\DepositoPlazoManager.cs" />
     <Compile Include="Controllers\ErrorManager.cs" />
     <Compile Include="Controllers\EstadisticaManager.cs" />
+    <Compile Include="Controllers\LicenciaManager.cs" />
     <Compile Include="Controllers\MarchamoManager.cs" />
     <Compile Include="Controllers\MonedaManager.cs" />
+    <Compile Include="Controllers\PermisoManager.cs" />
+    <Compile Include="Controllers\PrestamoManager.cs" />
     <Compile Include="Controllers\ServicioManager.cs" />
     <Compile Include="Controllers\SesionManager.cs" />
+    <Compile Include="Controllers\SobreManager.cs" />
     <Compile Include="Controllers\TarjetaManager.cs" />
     <Compile Include="Controllers\UsuarioManager.cs" />
     <Compile Include="CustomErrors\frmError.aspx.cs">
@@ -273,12 +281,16 @@
     <Compile Include="Models\DepositoPlazo.cs" />
     <Compile Include="Models\Error.cs" />
     <Compile Include="Models\Estadistica.cs" />
+    <Compile Include="Models\Licencia.cs" />
     <Compile Include="Models\LoginRequest.cs" />
     <Compile Include="Models\Marchamo.cs" />
     <Compile Include="Models\Moneda.cs" />
     <Compile Include="Models\Pago.cs" />
+    <Compile Include="Models\Permiso.cs" />
+    <Compile Include="Models\Prestamo.cs" />
     <Compile Include="Models\Servicio.cs" />
     <Compile Include="Models\Sesion.cs" />
+    <Compile Include="Models\Sobre.cs" />
     <Compile Include="Models\Tarjeta.cs" />
     <Compile Include="Models\Transferencia.cs" />
     <Compile Include="Models\Usuario.cs" />
@@ -333,6 +345,13 @@
     <Compile Include="Views\frmDepositoPlazo.aspx.designer.cs">
       <DependentUpon>frmDepositoPlazo.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Views\frmLicencia.aspx.cs">
+      <DependentUpon>frmLicencia.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\frmLicencia.aspx.designer.cs">
+      <DependentUpon>frmLicencia.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\frmMarchamo.aspx.cs">
       <DependentUpon>frmMarchamo.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -353,6 +372,20 @@
     </Compile>
     <Compile Include="Views\frmPago.aspx.designer.cs">
       <DependentUpon>frmPago.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\frmPermiso.aspx.cs">
+      <DependentUpon>frmPermiso.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\frmPermiso.aspx.designer.cs">
+      <DependentUpon>frmPermiso.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\frmPrestamo.aspx.cs">
+      <DependentUpon>frmPrestamo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\frmPrestamo.aspx.designer.cs">
+      <DependentUpon>frmPrestamo.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\frmReporteError.aspx.cs">
       <DependentUpon>frmReporteError.aspx</DependentUpon>
@@ -381,6 +414,13 @@
     </Compile>
     <Compile Include="Views\frmServicio.aspx.designer.cs">
       <DependentUpon>frmServicio.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\frmSobre.aspx.cs">
+      <DependentUpon>frmSobre.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\frmSobre.aspx.designer.cs">
+      <DependentUpon>frmSobre.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\frmTarjeta.aspx.cs">
       <DependentUpon>frmTarjeta.aspx</DependentUpon>
