Agregar gráfico de Marchamo

--- a/API/Web.config
+++ b/API/Web.config
@@ -77,8 +77,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-	  <add name="INTERNET_BANKING" connectionString="Data Source=DESKTOP-2B5NANB;Initial catalog=INTERNET_BANKING_DW1_3C2021;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-  <add name="INTERNET_BANKING_DW1_3C2021Entities" connectionString="metadata=res://*/Models.ModeloIB.csdl|res://*/Models.ModeloIB.ssdl|res://*/Models.ModeloIB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-2B5NANB;initial catalog=INTERNET_BANKING_DW1_3C2021;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+	  <add name="INTERNET_BANKING" connectionString="Data Source=DESKTOP-7BDSEUB\SQLSERVER2019WEB;Initial catalog=INTERNET_BANKING_DW1_3C2021;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+  <add name="INTERNET_BANKING_DW1_3C2021Entities" connectionString="metadata=res://*/Models.ModeloIB.csdl|res://*/Models.ModeloIB.ssdl|res://*/Models.ModeloIB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-7BDSEUB\SQLSERVER2019WEB;initial catalog=INTERNET_BANKING_DW1_3C2021;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
